Added external library support, with the help of QilletniToolchain