@@ -1,18 +1,20 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'is.yarr.qilletni.music.spotify'
-version = '1.0-SNAPSHOT'
+version = '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-api:2.22.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.22.1'
+    compileOnly 'org.apache.logging.log4j:log4j-api:2.22.1'
+    compileOnly 'org.apache.logging.log4j:log4j-core:2.22.1'
+    compileOnly 'org.apache.logging.log4j:log4j-slf4j-impl:2.22.1'
 
     implementation 'org.hibernate:hibernate-core:5.5.7.Final'
     implementation 'org.postgresql:postgresql:42.3.8'
@@ -24,10 +26,6 @@ dependencies {
     implementation ('se.michaelthelin.spotify:spotify-web-api-java:8.3.4') {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
-    
-    implementation project(':qilletni-api')
-}
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
+    compileOnly  'is.yarr.qilletni.api:qilletni-api:1.0.0-SNAPSHOT'
 }
